Message Alignment fixed

--- a/style.scss
+++ b/style.scss
@@ -1397,10 +1397,9 @@ animation:move-twink-back 200s linear infinite;
 }
 
 .message-container {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2.5rem;
   text-align: center;
   opacity: 0;
